--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,8 +4,8 @@
     <head>
         <title>404 - Pagina no encontrada</title>
     </head>
-    <body class="flex h-screen items-center justify-center bg-zinc-600 dark:bg-gray-900">
-        <div class="flex flex-col justify-center items-center text-center bg-white dark:bg-gray-800 rounded-lg shadow-zinc-500 shadow-xl px-10 py-8">
+    <body class="flex h-screen items-center justify-center bg-zinc-100 dark:bg-gray-900">
+        <div class="flex flex-col justify-center items-center text-center bg-white dark:bg-gray-800 rounded-lg shadow-lg px-10 py-8">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -37,7 +37,7 @@
             </p>
             <a
                 href="/"
-                class="inline-block px-4 py-2 text-black bg-gray-200 hover:bg-gray-300 rounded-lg border mt-6"
+                class="inline-block px-4 py-2 text-white bg-blue-500 hover:bg-blue-600 dark:bg-blue-400 dark:hover:bg-blue-500 rounded-lg border mt-6"
             >
                 Volver a la Pagina principal
             </a>
