--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,8 +4,8 @@
     <head>
         <title>404 - Pagina no encontrada</title>
     </head>
-    <body class="flex h-screen items-center justify-center bg-zinc-100 dark:bg-gray-900">
-        <div class="flex flex-col justify-center items-center text-center bg-white dark:bg-gray-800 rounded-lg shadow-lg px-10 py-8">
+    <body class="flex h-screen items-center justify-center bg-zinc-100 dark:bg-principal">
+        <div class="flex flex-col justify-center items-center text-center bg-white dark:bg-secundario rounded-lg shadow-lg px-10 py-8">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -16,7 +16,7 @@
                 width="96"
                 height="96"
                 stroke-width="1"
-                class="text-blue-500 dark:text-blue-400"
+                class="text-lime-400"
             >
                 <path d="M14 17h-10a1 1 0 0 1 -1 -1v-12a1 1 0 0 1 1 -1h16a1 1 0 0 1 1 1v7.5"></path>
                 <path d="M3 13h11.5"></path>
@@ -26,18 +26,18 @@
                 <path d="M19 22v.01"></path>
                 <path d="M19 19a2.003 2.003 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483"></path>
             </svg>
-            <h1 class="text-4xl font-bold text-gray-800 dark:text-gray-200 mt-4">
+            <h1 class="lg:text-4xl text-9xl font-bold text-gray-800 dark:text-gray-200 mt-4">
                 404
             </h1>
-            <h2 class="text-2xl font-semibold text-gray-700 dark:text-gray-300 mt-2">
+            <h2 class="lg:text-2xl text-7xl font-semibold text-gray-700 dark:text-gray-300 mt-2">
                 Pagina no encontrada
             </h2>
-            <p class="text-gray-600 dark:text-gray-400 mt-4">
+            <p class="text-gray-600 dark:text-gray-400 mt-4 lg:mt-2 lg:text-base text-3xl text-light py-8 lg:py-0 px-16 font-light">
                 Lo sentimos, la Pagina que estas buscando no existe o ha sido movida.
             </p>
             <a
                 href="/"
-                class="inline-block px-4 py-2 text-white bg-blue-500 hover:bg-blue-600 dark:bg-blue-400 dark:hover:bg-blue-500 rounded-lg border mt-6"
+                class="inline-block px-12 lg:px-4 py-6 lg:py-2 text-black hover:text-white bg-lime-400 hover:bg-lime-800 dark:bg-lime-400 dark:hover:bg-lime-800 rounded-lg mt-6 duration-150 text-5xl lg:text-base lg:font-semibold font-bold"
             >
                 Volver a la Pagina principal
             </a>
